--- a/themes/redefine/_config.yml
+++ b/themes/redefine/_config.yml
@@ -208,6 +208,9 @@ navbar:
     Home: 
       path: / 
       icon: fa-regular fa-house # can be empty
+    About:
+      path: /about/
+      icon: "fa-solid fa-circle-info"
     # Archives: 
     #   path: /archives 
     #   icon: fa-regular fa-archive # can be empty
